--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,82 @@ input, select{
 
 /* Todo Header */
 
-#todo_form #edit_form{
-    
+#todo_form, #edit_form{
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+}
+#todo_form p, #edit_form p{
+    margin-bottom: .5rem;
+    font-weight: bold;
+}
+
+.form_control{
+    display: flex;
+}
+
+.form_control input{
+    margin-right: .3rem;
+}
+
+.cancel_edit_btn{
+    margin-top: 1rem;
+}
+
+/* Todo toobar*/
+
+.toolbar{
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+}
+.toolbar h4{
+    margin-bottom: .5rem;
+}
+.search{
+    border-right: 1px solid #ccc;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+}
+.search form{
+    display: flex;
+}
+.search input{
+    width: 100%;
+    margin-right: .3rem;
+}
+.filter{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+}
+.filter select{
+    flex: 1;
+}
+
+/* Todo list */
+
+.todo{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+    transition: 0.33s;
+}
+.todo h3{
+    flex: 1;
+    font-size: .9rem;
+}
+.todo button{
+    margin-left: .4rem;
+}
+.done{
+    background-color: #395169;
+}
+.done h3{
+    color: #fff;
+    text-decoration: line-through;  /*Linha passando por cima do texto*/
 }
